Minor formatting issues
Signed-off-by: Davis Gramza <davisgramza@gmail.com>

--- a/templates/administrator_landing.html
+++ b/templates/administrator_landing.html
@@ -24,5 +24,7 @@
         <hr/>
         <a href="{{ url_for('administrator.configuration') }}">Configuration</a>
         <hr/>
+        <a href="{{ url_for('logout') }}">Logout</a>
+        <hr />
     </div>
 {% endblock %}
