--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,7 +10,7 @@
             <form action="/admin" method="post">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Username" autofocus>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
