Added reset route to the administrator landing page
Signed-off-by: Davis Gramza <davisgramza@gmail.com>

--- a/templates/administrator_landing.html
+++ b/templates/administrator_landing.html
@@ -24,6 +24,8 @@
         <hr/>
         <a href="{{ url_for('administrator.configuration') }}">Configuration</a>
         <hr/>
+        <a href="{{ url_for('administrator.reset') }}">Reset Program</a>
+        <hr />
         <a href="{{ url_for('logout') }}">Logout</a>
         <hr />
     </div>
