--- a/templates/view_mentors.html
+++ b/templates/view_mentors.html
@@ -1,58 +1,72 @@
-{% extends "template.html" %}
+<!doctype html>
+<html lang="en-us">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{% block title %}View Mentors{% endblock %}
-
-{% block body %}
-    <div class="justify-content-center">
-        <form action="/view_mentors">
-            <div class="form-row justify-content-center">
-                <div class="col-auto">
-                    <label class="sr-only" for="search">Search: </label>
-                    <input type="text" class="form-control mb-3" id="search" name="search" placeholder="Search...">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ url_for('static', filename='site.css') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <title>View Mentors</title>
+    </head>
+    <body>
+        <div class="view-mentors-wrapper">
+            <p class="text-center"><span class="title"><u>View Mentors</u></span></p>
+            <hr />
+            <form action="/view_mentors">
+                <div class="mentor-search">
+                    <div class="form-row">
+                        <div class="col">
+                            <label class="sr-only" for="search">Search: </label>
+                            <input type="text" class="form-control" id="search" name="search" placeholder="Search...">
+                        </div>
+                        <div class="col-auto">
+                            <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-auto">
-                    <button type="submit" class="btn btn-primary mb-2">Submit</button>
-                </div>
-            </div>
-        </form>
-        {% for mentor in mentors %}
-            {% if not admin and mentor.status %}
-                <div class="justify-content-center mentor-section">
-                    <p class="text-center"><span class="title">{{ mentor.mentor_name }}</span></p>
-                    <hr/>
-                    <p><span class="title">Category:</span> {{ mentor.category }}</p>
-                    <p><span class="title">Address:</span> {{ mentor.address }}</p>
-                    <p><span class="title">Description:</span> {{ mentor.description }}</p>
-                    {% for opportunity in mentor.opportunities %}
-                        <p><span class="title">Opportunity {{ loop.index }}</span>: {{ format_date(opportunity.date) }}, {{ get_session(opportunity.session) }}</p>
-                    {% endfor %}
-                    <hr />
-                    {% if status == 'Active' %}
-                        {% if mentor.waitlist_active %}
-                            <p class="text-center alert-warning">This mentor's opportunties have already been filled. If you would like to be notified if an opportunity becomes available, press the button below.</p>
-                            <a class="btn btn-secondary" href="{{ url_for('student.get_notifications', mid=mentor.id) }}">Notify Me</a>
-                        {% else %}
-                            <a class="btn btn-primary" href="{{ url_for('student.register', mid=mentor.id) }}">Register</a>
-                        {% endif %}
+            </form>
+            <div class="mentor-container">
+                {% for mentor in mentors %}
+                    {% if not admin and mentor.status %}
+                        <div class="mentor-section">
+                            <p class="text-center"><span class="title">{{ mentor.mentor_name }}</span></p>
+                            <hr/>
+                            <p><span class="title">Category:</span> {{ mentor.category }}</p>
+                            <p><span class="title">Address:</span> {{ mentor.address }}</p>
+                            <p><span class="title">Description:</span> {{ mentor.description }}</p>
+                            {% for opportunity in mentor.opportunities %}
+                                <p><span class="title">Opportunity {{ loop.index }}</span>: {{ format_date(opportunity.date) }}, {{ get_session(opportunity.session) }}</p>
+                            {% endfor %}
+                            <hr />
+                            {% if status == 'Active' %}
+                                {% if mentor.waitlist_active %}
+                                    <p class="text-center alert-warning">This mentor's opportunties have already been filled. If you would like to be notified if an opportunity becomes available, press the button below.</p>
+                                    <a class="btn btn-secondary" href="{{ url_for('student.get_notifications', mid=mentor.id) }}">Notify Me</a>
+                                {% else %}
+                                    <a class="btn btn-primary" href="{{ url_for('student.register', mid=mentor.id) }}">Register</a>
+                                {% endif %}
+                            {% endif %}
+                        </div>
                     {% endif %}
-                </div>
-            {% endif %}
-            {% if admin %}
-                <div class="justify-content-center mentor-section">
-                    <p class="text-center"><span class="title">{{ mentor.mentor_name }}</span></p>
-                    <hr/>
-                    <p><span class="title">Category:</span> {{ mentor.category }}</p>
-                    <p><span class="title">Address:</span> {{ mentor.address }}</p>
-                    <p><span class="title">Description:</span> {{ mentor.description }}</p>
-                    {% for opportunity in mentor.opportunities %}
-                        <p><span class="title">Opportunity {{ loop.index }}</span>: {{ format_date(opportunity.date) }}, {{ get_session(opportunity.session) }}</p>
-                    {% endfor %}
-                    <p><span class="title">Status:</span> {% if mentor.status %}Active{% else %}Inactive{% endif %}</p>
-                    <a class="btn btn-primary" href="{{ url_for('mentor.edit_mentor', mid=mentor.id) }}">Edit Mentor</a>
-                    <a class="btn btn-primary" href="{{ url_for('mentor.view_mentor', mid=mentor.id) }}">View/Delete Mentor</a>
-                    <a class="btn btn-primary" href="{{ url_for('mentor.mentor_schedule', mid=mentor.id) }}">Mentor Schedule</a>
-                </div>
-            {% endif %}
-        {% endfor %}
-    </div>
-{% endblock %}
+                    {% if admin %}
+                        <div class="mentor-section">
+                            <p class="text-center"><span class="title">{{ mentor.mentor_name }}</span></p>
+                            <hr/>
+                            <p><span class="title">Category:</span> {{ mentor.category }}</p>
+                            <p><span class="title">Address:</span> {{ mentor.address }}</p>
+                            <p><span class="title">Description:</span> {{ mentor.description }}</p>
+                            {% for opportunity in mentor.opportunities %}
+                                <p><span class="title">Opportunity {{ loop.index }}</span>: {{ format_date(opportunity.date) }}, {{ get_session(opportunity.session) }}</p>
+                            {% endfor %}
+                            <p><span class="title">Status:</span> {% if mentor.status %}Active{% else %}Inactive{% endif %}</p>
+                            <a class="btn-sm btn-secondary" href="{{ url_for('mentor.edit_mentor', mid=mentor.id) }}">Edit Mentor</a>
+                            <a class="btn-sm btn-primary" href="{{ url_for('mentor.mentor_schedule', mid=mentor.id) }}">Mentor Schedule</a>
+                            <a class="btn-sm btn-secondary" href="{{ url_for('mentor.view_mentor', mid=mentor.id) }}">View/Delete Mentor</a>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+    </body>
+</html>
